config-root/namespaces/jx-staging/golang-gk/golang-gk-golang-gk-deploy.yaml
# Source: golang-gk/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-gk-golang-gk
  labels:
    draft: draft-app
    chart: "golang-gk-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: golang-gk-golang-gk
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: golang-gk-golang-gk
    spec:
      serviceAccountName: golang-gk-golang-gk
      containers:
        - name: golang-gk
          image: "10.104.74.249/gokula-krishna-dev/golang-gk:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
