config-root/namespaces/jx-staging/golang-gk/golang-gk-svc.yaml
# Source: golang-gk/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-gk
  labels:
    chart: "golang-gk-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: golang-gk-golang-gk
