config-root/namespaces/jx-staging/golang-gk/golang-gk-ingress.yaml
# Source: golang-gk/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: golang-gk
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: golang-gk
              servicePort: 80
      host: golang-gk-jx-staging.192.168.99.114.nip.io
